--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "axios": "^1.2.5",
     "core-js": "^3.9.1",
+    "node-fetch": "^3.3.0",
+    "openai": "^3.1.0",
     "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
