added improvegrammar function, still needs worked, and apikey fo r sapling in case we use it

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@saplingai/sapling-js": "^1.0.7",
     "axios": "^1.2.5",
     "core-js": "^3.9.1",
     "node-fetch": "^3.3.0",
